fix: master: changed mobile-sub-opener class into mobile-dropdown-opener; trying to create a function opening inner menus inside dropdown links on mobile

--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -113,7 +113,7 @@
         width: 90%;
     }
 
-    .mobile-nav-link .mobile-sub-opener{
+    .mobile-nav-link .mobile-dropdown-opener{
         float: right;
         color:black;
     }
